mule-user-guide/v/3.2/transforming-data-in-a-flow.adoc
= Transforming Data in a Flow

This example shows how to use a custom transformer. In this case, a simple transformer is used in a flow to alter information received in an HTTP request before passing the information to a custom component.

== What you Will Learn

* How to create a Custom Transformer in Mule Studio.
* How to configure the Transformer in the flow.
* How to implement a Custom Transformer.

* http://www.youtube.com/watch?v=qzv4uG2zHF8
image:http://www.mulesoft.org/documentation/download/attachments/51053656/working-with-transformers-flow-100.png[image]]
*Watch a video*
+
 +
+
See this example built and run in Mule Studio

10 minutes

= Build it Now!

== Prerequisites

This examples requires that you run through the example described in link:/mule-user-guide/v/3.2/adding-business-logic-to-a-flow[Adding Business Logic to a Flow].

== Building the Example

\1. Let's begin with the "Hello" flow you built in link:/mule-user-guide/v/3.2/adding-business-logic-to-a-flow[Adding Business Logic to a Flow]. Run it and confirm in a browser window that when you go to http://localhost:8082/Fred you see the following on screen:

image:/documentation-3.2/download/attachments/50036846/studioBrowserOutputInitial.png?version=1&modificationDate=1358793591217[image]

Now, wouldn't it be nice to remove that slash before the name? A Custom Transformer can take care of that.

\2. Create a new class in the org.mulesoft.example.hello package

image:/documentation-3.2/download/attachments/50036846/studioAddNewClass.png?version=1&modificationDate=1358793305736[image]

\3. Name it NameTransformer, and make it extend AbstractTransformer

image:/documentation-3.2/download/attachments/50036846/studioConfigureTransformerClass.png?version=1&modificationDate=1358793371479[image]

\4. Implement it as follows. It will detect Strings beginning with a slash and remove it. Otherwise, it will return the original object.

image:/documentation-3.2/download/attachments/50036846/studioTransformerCode.png?version=1&modificationDate=1358793402192[image]

\5. Open your flow. It should look like this:

image:/documentation-3.2/download/attachments/50036846/studioFlowShouldLookLike.png?version=1&modificationDate=1358793435329[image]

\6. Insert a Java Transformer. Do so by dragging it from the sidebar and dropping it between the HTTP Inbound Endpoint and the Hello Component.

[cols=",",]
|===
|image:/documentation-3.2/images/icons/emoticons/information.gif[image] |In previous Studio versions, the Java Transformer was named *Custom Transformer*.

|===

image:/documentation-3.2/download/attachments/50036846/studioAddTransformerComponent.png?version=2&modificationDate=1358793465290[image]

\7. Double-click on the Transformer you just inserted and insert the full name of the Transformer class we just implemented. You may also want to add some additional documentation information. Click OK when you are done and save the flow.

image:/documentation-3.2/download/attachments/50036846/studioConfigureTransformerComponent.png?version=1&modificationDate=1358793493759[image]

image:/documentation-3.2/download/attachments/50036846/studioConfigureTransformerComponentDoc.png?version=1&modificationDate=1358793533778[image]

== Running the Example

\8. Run as Mule Application (as you did in the previous examples).

\9. Open a browser window and go to http://localhost:8082/Fred. Notice that this time the greeting does not contain a slash:

image:/documentation-3.2/download/attachments/50036846/studioBrowserOutputFinal.png?version=2&modificationDate=1358793570719[image]

== What Just Happened?

* You created a Custom transformer and plugged it into the flow.
* Your HTTP request payload was processed by the Transformer before passing it to the Component.
* The HTTP Endpoint, the Transformer and the Component don't know about each other. Mule connects them as necessary.

== References

* link:/mule-user-guide/v/3.2/using-transformers[Using Transformers]
* link:/mule-user-guide/v/3.2/creating-custom-transformers[Creating Custom Transformers]
* link:/mule-user-guide/v/3.2/creating-custom-transformer-class[Creating Custom Transformer Class]

== Next Steps

[cols=",,",]
|===
|http://www.mulesoft.org/display/32X/Filtering+Invalid+Requests[« Filtering Invalid Requests] |http://www.mulesoft.org/display/32X/Home[Back to Index] |http://www.mulesoft.org/display/32X/Invoking+Component+Methods[Invoking Component Methods »]
|===

'''''

image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/loading_mini.gif[image]image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/rater.gif[image]

Your Rating:

Thanks for voting!

link:/documentation-3.2/plugins/rate/rating.action?decorator=none&displayFilter.includeCookies=true&displayFilter.includeUsers=true&ceoId=50036846&rating=1&redirect=true[image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[image]]link:/documentation-3.2/plugins/rate/rating.action?decorator=none&displayFilter.includeCookies=true&displayFilter.includeUsers=true&ceoId=50036846&rating=2&redirect=true[image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[image]]link:/documentation-3.2/plugins/rate/rating.action?decorator=none&displayFilter.includeCookies=true&displayFilter.includeUsers=true&ceoId=50036846&rating=3&redirect=true[image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[image]]link:/documentation-3.2/plugins/rate/rating.action?decorator=none&displayFilter.includeCookies=true&displayFilter.includeUsers=true&ceoId=50036846&rating=4&redirect=true[image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[image]]link:/documentation-3.2/plugins/rate/rating.action?decorator=none&displayFilter.includeCookies=true&displayFilter.includeUsers=true&ceoId=50036846&rating=5&redirect=true[image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[image]]

image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[Please Wait,title="Please Wait"]

Please Wait

Results:

image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[Pathetic,title="Pathetic"]image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[Bad,title="Bad"]image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[OK,title="OK"]image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[Good,title="Good"]image:/documentation-3.2/download/resources/com.adaptavist.confluence.rate:rate/resources/themes/v2/gfx/blank.gif[Outstanding!,title="Outstanding!"]

17

rates

